Added big Kilix, text header modified, added a button in extia

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -5,14 +5,17 @@
 		<header class="landing-home">
 			<div class="row">
 				<div class="large-10 columns">
+					<div class="kilix-dispatch show-for-medium-up">
+						<svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg>	
+					</div>
 					<h1 class='landing-main-text'>
-						Kilix est une agence digitale,
-						avec des post-it sur les murs.
+						Nous sommes une agence digitale,
+						avec des post-it sur les murs. <i class="icon-arrow-down4"> </i>
 					</h1>
 					<!-- <p>Kilix est une agence digitale mettant l'agilité au service de vos projets web et mobile.</p> -->
-					<a class='landing-button'>
-						<i class="icon-long-arrow-down"> </i> <span>L’agilité au coeur de vos projets</span>
-					</a>
+					<!--<a class='landing-button'>
+						<i class="icon-arrow-down4"> </i> <span>L’agilité au coeur de vos projets</span>
+					</a>-->
 				</div>
 
 			</div>
@@ -23,14 +26,14 @@
 					<h2><span>Gestion <span>par</span></span> <span>la</span> <span>valeur</span></h2>
 					<h3>L’essentiel avant tout !</h3>
 					<p>Parce que votre Time-to-Market est notre première priorité : Valorisez vos besoins, et reprenez le contrôle de vos projets. Ensemble, développons avant tout ce qui compte vraiment.</p>
-
-					<a class='next-section'>
-						<i class="icon-long-arrow-down"> </i>
-					</a>
 				</div>
 				<div class="large-6 medium-7 columns">
 					<svg id="VALEUR-dispatch" x="0px" y="0px" viewBox="0 0 1400 700"></svg>		
 				</div>
+
+				<a class='next-section'>
+					<i class="icon-arrow-down4"> </i>
+				</a>
 			</div>
 		</section>
 		<section class="svg-anim ❤ svg-risque" data-color="col2" data-title="Gestion par les risques">
@@ -39,33 +42,30 @@
 					<h2><span>Gestion par</span> <span>les</span> <span>risques</span></h2>
 					<h3>Anticiper l’imprévu !</h3>
 					<p>Plus que jamais, l’imprévisible est toujours le pire ennemi du projet. C’est en anticipant conjointement les futurs écueils que nous protégeons vos projets afin d’en assurer leur totale réussite.</p>
-
-					<a class='next-section'>
-						<i class="icon-long-arrow-down"> </i>
-					</a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7  columns">
 					<svg id="RISK-dispatch" x="0px" y="0px" viewBox="600 100 800 600">
     				</svg>
 				</div>
+				<a class='next-section'>
+					<i class="icon-arrow-down4"> </i>
+				</a>
 			</div>
 		</section>
 		<section class="svg-anim ❤ svg-amelio" data-color="col3" data-title="Amélioration continue">
 			<div class="row">
+				<a class='next-section'>
+					<i class="icon-arrow-down4"> </i>
+				</a>
 				<div class="large-5 medium-5 columns anim-content">
 					<h2><span>Amélioration</span> <span>continue</span></h2>
 					<h3>Se perfectionner sans cesse</h3>
 					<p>Tous les projets sont différents. Nous profitons de cette diversité pour apprendre continuellement et toujours viser l’excellence. Ainsi, nous mettons à profit ces retours d’expérience au service de vos produits.</p>
-
-					<a class='next-section'>
-						<i class="icon-long-arrow-down"> </i>
-					</a>
 				</div>
 				<div class="large-8 medium-7 columns">
-					<svg id="AMELIO-transform" x="0px" y="0px" viewBox="0 0 1500 800">
+					<svg id="AMELIO-transform" x="0px" y="0px" viewBox="0 0 1500 900">
     				</svg>
 				</div>
-
 			</div>
 		</section>
 		<section class="svg-anim ❤ svg-extia" data-color="col4" data-title="Extia">
@@ -74,6 +74,7 @@
 					<h2>Extia</h2>
 					<h3>Paré à toute éventualité !</h3>
 					<p>Nous tirons notre expertise d’Extia, qui met à votre disposition ses meilleurs consultants qui vous garantissent la réussite de votre projet au Time-To-Market optimisé, aux risques maîtrisés, avec les méthodes de gestion de projet les plus rodées. </p>
+					<a href="/agilite" class="button">En savoir plus</a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7  columns">
 					<img id="EXTIA" class="svg" src="assets/img/svg/kilix_anim_extia.svg">
