--- a/web/assets/scss/componenents/menu.scss
+++ b/web/assets/scss/componenents/menu.scss
@@ -46,13 +46,15 @@
 				color:white;
 			}
 
+			.back-to-top{opacity:0!important; pointer-events:none;}
+
 			.row{
 				height: rem-calc(140);
 				line-height: rem-calc(140);
 				
 			}
 
-			.logo{}
+			.logo{opacity:0;}
 			.logo svg {
 				height: 140px;
 
@@ -185,7 +187,7 @@
 		padding: 0 1rem;
 		top:0; left:4rem;
 		z-index:2;
-
+		transition:0.5s;
 		img {
 			height: 100%;
 		}
