--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -132,11 +132,10 @@ a {
 
 /* COMPONENTS */ 
 
+@import "componenents/logo-home";
 @import "componenents/menu";
 
-.icon-long-arrow-down{
-	font-size:rem-calc(30);
-}
+
 
 .site-wrapper {
 	transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);
@@ -169,6 +168,25 @@ a {
 .disabled{
 	pointer-events:none;
 }
+
+.back-to-top{
+	text-align: center;
+	position: absolute;
+	width: 30%;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	color: white;
+	font-size: rem-calc(30);
+	line-height: rem-calc(110);
+	opacity:0;
+	cursor: pointer;
+	transition: opacity 0.5s;
+
+	&:hover{opacity:1;}
+}
+
+.force-opacity{opacity:1!important;}
 
 
 
@@ -206,7 +224,6 @@ a {
 
 	.row {
 		height: 100%;
-		overflow: hidden;
 		position: relative;
 
 
@@ -221,7 +238,7 @@ a {
 	.landing-button{
 		color:white;
 
-		.icon-long-arrow-down{
+		i{
 			text-align: center;
 			border-radius: 50%;
 			border: 2px solid #fff;
@@ -251,17 +268,30 @@ a {
 		
 		color:white;
 		font-weight: normal;
+		text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.56);
+		cursor: pointer;
+		position: relative;
+		z-index:1;
+		
+		i{
+			font-size: 35px;text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.56);opacity:0;
+			transform:translateY(-1rem);transition:0.5s; display: inline-block;
+		}
 
 		@media #{$medium-up} {
-			margin-top: rem-calc(150);
+			margin-top: rem-calc(220);
 			font-size: rem-calc(50);
 			line-height: rem-calc(50);
 		}
 
 		@media #{$xlarge-up} {
-			margin-top: rem-calc(250);
+			margin-top: rem-calc(330);
 			font-size: rem-calc(70);
-			line-height: rem-calc(80);
+			line-height: rem-calc(90);
+		}
+
+		&:hover{
+			i{opacity:1;transform:translateY(0);}
 		}
 	}
 
@@ -350,28 +380,33 @@ a {
 
 		&#VALEUR-dispatch{
 			@media #{$medium-up} {
-				transform: scale(1.6) translateX(-8rem);
+				transform: scale(1.35) translateX(-8rem);
 			}
 
 			// #valeur-carenage-front{@include colorize($col1);}
 			// #valeur-carenage-left{@include colorize($col1);}
 			// #valeur-carenage-right{@include colorize($col1);}
 			// #valeur-volant{@include colorize($col1);}
-			#casque{@include colorize($col1);}
+			#casque, #valeur-gant1, #valeur-gant2{@include colorize($col1);}
 			[fill="#95C11F"]{fill:$col1;}
 
 		}
 
 		&#RISK-dispatch{
 			@media #{$medium-up} {
-				transform: scale(1.32) translateX(6rem);
+				transform: scale(1.32) translateX(-1rem);
 			}
 			height: rem-calc(250);
 			@media #{$medium-up} {
 				height: rem-calc(500);
 			}
 
-			#risk-casque{@include colorize($col2);}
+			#risk-casque, #risk-gant1, #risk-gant2{@include colorize($col2);}
+		}
+
+		&#AMELIO-transform{
+			#amelio-casque1, #amelio-casque2, #aileron-front, #aileron-back, 
+			#amelio-kart-gant1, #amelio-kart-gant2, #amelio-f1-gant1, #amelio-f1-gant2{@include colorize($col3);}
 		}
 
 		&#EXTIA{
@@ -384,7 +419,7 @@ a {
 	.row{
 		padding: 2rem 0;position: relative;
 
-		@media #{$medium-up}{
+		@media #{$xlarge-up}{
 			padding: 5rem 0;
 		}
 		
@@ -392,21 +427,23 @@ a {
 			position: absolute;
 			bottom: 0;
 			left: 0;
-			bottom: -6.25rem;
-			left: 50%;
+			bottom: rem-calc(-47);
+			left: 25%;
 			transform: translateX(-50%);
 
-			.icon-long-arrow-down{
+			i{
 				text-align: center;
 				border-radius: 50%;
-				border: 2px solid $primary-color;
-				padding-top: 0.5rem;
-				width: rem-calc(52);
-				height: rem-calc(52);
-				display: block;
-				font-size: rem-calc(30);
+				border: 2px solid #384047;
+				width: rem-calc(90);
+				height: rem-calc(90);
+				font-size: rem-calc(27);
 				vertical-align: middle;
-				transition: all 0.2s;
+				transition: all .2s;
+				transition: all .2s;
+				line-height: rem-calc(50);
+				background: #384047;
+				color: white;
 				@extend .show-for-medium-up;
 
 
@@ -414,6 +451,7 @@ a {
 					background: black;
 					color:white;
 					border-color:white;
+					line-height: rem-calc(60);
 				}
 				
 			}
@@ -499,7 +537,7 @@ a {
 	}
 
 	h3:after, &:before{background:$col1;}
-	.row .next-section .icon-long-arrow-down:hover{ background: $col1; }
+	.row .next-section i:hover{ background: $col1; }
 }
 .svg-risque{
 
@@ -527,11 +565,12 @@ a {
 	@media #{$xlarge-up} { h2{font-size:rem-calc(65);} }
 
 	h3:after,&:before{background:$col2;}
-	.row .next-section .icon-long-arrow-down:hover{ background: $col2; }
+	.row .next-section i:hover{ background: $col2; }
+	.row .next-section { left: 75%; }
 }
 .svg-amelio{
 	@media #{$large-up} {
-		.large-8{margin-top:-20rem;}
+		.large-8{margin-top:-25rem;}
 	}
 
 	@media #{$large-up} {
@@ -552,7 +591,7 @@ a {
 	@media #{$xlarge-up} { h2{font-size:rem-calc(65);} }
 
 	h3:after, &:before{background:$col3;}
-	.row .next-section .icon-long-arrow-down:hover{ background: $col3; }
+	.row .next-section i:hover{ background: $col3; }
 }
 .svg-extia{
 
@@ -564,7 +603,8 @@ a {
 	@media #{$xlarge-up} { h2{font-size:rem-calc(100);} }
 
 	h3:after, &:before{background:$col4;}
-	.row .next-section .icon-long-arrow-down:hover{ background: $col4; }
+	.row .next-section i:hover{ background: $col4; }
+	.row .next-section { left: 75%; }
 }
 
 
@@ -615,7 +655,7 @@ a {
 div.references{
 	background:#f2f8f8;
 	position:relative;
-	z-index:1;
+	z-index:2;
 	padding: 1.5rem 0 0 0;
 
 	.columns{
@@ -692,11 +732,28 @@ footer{
 	background: #202529;
 	text-align: center;
 	padding: 2rem 0;
+	position: relative;
+	z-index: 5;
+
+	&:hover .copyright i:before{
+		content: attr(data-text); 
+		color: #7E7E7E;
+		font-family: Source Sans Pro;
+		width: 114px;
+	}
 
 	.copyright{
 		font-size: rem-calc(18);
 		color: #7E7E7E;
 		font-weight: 400;
 		line-height: 22px;
+
+		i{ color:$col4; 
+			&:before{
+				transition:width 1s,color 1s;
+				width: 18px;
+				display: inline-block;
+			}
+		}
 	}
 }
