--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -5,7 +5,7 @@
 		<header class="landing landing-agilite">
 			<div class="row">
 				<div class="large-8 columns">
-					<h1>Notre culture : <br> L'agilité<span></span></h1>
+					<h1>Notre culture : <br> L'agilité. <span></span><i class="icon-arrow-down4"> </i></h1>
 				</div>
 			</div>
 		</header>
