--- a/web/assets/scss/components/menu.scss
+++ b/web/assets/scss/components/menu.scss
@@ -76,7 +76,7 @@
 		float: left;
 		font-size: rem-calc(45);
 		color: #000; 
-		border: 1px solid #dfdfdf;
+		border: 1px solid rgba(255, 255, 255, 0.1);
 		border-width: 0 1px;
 		box-sizing:border-box;
 		width:rem-calc(63);
@@ -100,7 +100,8 @@
 		.icon-folded {
 			display: block;
 			transform:translateY(rem-calc(0));
-			transition:transform .5s ease;		
+			transition:transform .5s ease;	
+			color:white;	
 		}
 	}
 
@@ -108,7 +109,7 @@
 	.nav-links-wrapper {
 		backface-visibility:hidden;
 		transition:all .6s cubic-bezier(0.165,0.840,0.440,1.000);
-		background: #fff;
+		background: #2c313f;
 		position: absolute;
 		width: 100%;
 		bottom: rem-calc(60);
@@ -146,7 +147,7 @@
 			color:white; //Test couleur color:$primary-color;
 			backface-visibility:hidden;
 			display: block;
-			margin-left: 3rem;
+			margin-left: 1rem;
 			height: 45px;
 			line-height: 45px;
 			pointer-events: visible;
@@ -175,6 +176,7 @@
 
 			@media #{$medium-up} {
 				display: inline-block;
+				margin-left: 3rem;
 			}
 		}
 	}
