--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -1,9 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700);
-
-
-/* PROTOTYPING */
-
 /* VARIABLES */
 $primary-color : #384047;
 $second-color: #a8b7bf;
@@ -17,7 +11,9 @@ $col5: #087ec2;
 
 $small-margin:500;
 $medium-margin:600;
-$large-margin:850;
+$large-margin:800;
+
+
 
 
 /* MIXINS */
@@ -31,729 +27,28 @@ $large-margin:850;
 	*[fill="#9C9B9B"]{fill:#2c313f; /*darken($col,17%);*/} 	//+17%
 }
 
-/* BASE */
-body {
-	font-family: "Source Sans Pro";
-	transition: height 1s;
-	background: #fff;
-	min-height: 800px;
-	color: $primary-color;
-}
-
-
-
-h1{
-	font-family: Ubuntu;
-	font-weight: 500;
-	font-size: rem-calc(40);
-	line-height: rem-calc(48);
-
-	@media #{$medium-up}{
-		font-size: rem-calc(54);
-		line-height: rem-calc(70);
-	}
-	
-	color: $primary-color;
-}
-
-h2{
-	font-family: Ubuntu;
-	font-weight: 500;
-	font-size: rem-calc(48);
-	color: $second-color;
-
-}
-
-h3{
-
-}
-
-p{
-	font-size: rem-calc(18);
-	line-height: rem-calc(28);
-	color: $text-color;
-}
-a {
-	text-decoration: none;
-
-	&.button {
-		font-family: "Source Sans Pro";
-		transition:all .3s cubic-bezier(0.165,0.840,0.440,1.000);
-	}
-
-	&.button-white{
-		margin-bottom:7rem;
-		font-size: 1.3rem;
-		font-family: Source sans pro;
-		background: transparent;
-		border: 2px solid #fff;
-		padding: .5em 1.1em;
-		border-radius: 3px;
-
-		@media #{$medium-up} {
-			margin-bottom:8rem;
-		}
-
-
-		&:hover{
-			color: $primary-color;
-			background:white;
-		}
-
-
-	}
-
-	&.primary-button {
-		width: rem-calc(292);
-		height: rem-calc(42);
-		background: #4f5a64;
-		line-height: 42px;
-		padding: 0;
-		border-radius: 4px;
-		margin: auto;
-		display: block;
-		margin: 0;
-		box-shadow: 0px 4px 0px 0px #384047;
-
-
-		&:hover {
-			transform:translateY(rem-calc(1));
-			box-shadow: 0px 3px 0px 0px #384047;
-			background:#58646F;
-		}
-
-		&:active {
-			transform:translateY(rem-calc(4));
-			box-shadow: 0px 0px 0px 0px #384047;
-		}
-	}
-
-}
-
-/* COMPONENTS */ 
-
-@import "componenents/logo-home";
-@import "componenents/menu";
-
-
-
-.site-wrapper {
-	transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);
-	.main-wrapper{
-		position:relative; z-index:1;
-		overflow: hidden;
-	}	
-}
-
-
-.container{
-	@include clearfix;
-	position: relative;
-}
-
-.wrapper-new{
-	transform: translateX(100%);
-	position: absolute;
-	top:0;
-	left:0;
-	width:100%;
-	z-index: 10;
-
-	&.wrapper-prev{
-		transform: translateX(-100%);
-	}
-}
-
-
-.disabled{
-	pointer-events:none;
-}
-
-.back-to-top{
-	text-align: center;
-	position: absolute;
-	width: 30%;
-	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	color: white;
-	font-size: rem-calc(30);
-	line-height: rem-calc(110);
-	opacity:0;
-	cursor: pointer;
-	transition: opacity 0.5s;
-
-	&:hover{opacity:1;}
-}
-
-.force-opacity{opacity:1!important;}
-
-
-
+/* KEYFRAMES */
 @keyframes blink{
      from { opacity:0.05 }
      35%  { opacity:0.2; }
      to   { opacity:0.05; }
 }
 
-/*HOME*/
-.landing-home{
-	height:rem-calc($small-margin);
-	padding-top: rem-calc(63);
 
-	width: 100%;
-	background-image: url('../img/landing-bg-small.jpg');
-		background-size: cover;
-	
-	-webkit-backface-visibility: hidden; 
-	-webkit-transform: translateZ(0);
-	z-index:1;
+/* COMPONENTS */ 
 
-	@media #{$medium-up}{
-		height:rem-calc($medium-margin);
-		padding-top: rem-calc(120);
+@import "components/global";
+@import "components/logo-home";
+@import "components/menu";
+@import "components/footer";
 
-		background-image: url('../img/landing-bg.jpg');background-size: cover; background-position: top right;
-		position: fixed; top:0; left:0;
+@import "sections/home";
+@import "sections/agilite";
+@import "sections/contact";
 
-	}
 
-	@media #{$xlarge-up}{
-		height:rem-calc($large-margin);
-	}	
 
-	.row {
-		height: 100%;
-		position: relative;
 
 
-	}
 
-	p{
-		font-size:rem-calc(20);
-		margin-bottom: 3rem;
-		color:rgba(175, 175, 175, 0.52);
-	}
 
-	.landing-button{
-		color:white;
-
-		i{
-			text-align: center;
-			border-radius: 50%;
-			border: 2px solid #fff;
-			padding-top: 0.5rem;
-			width: rem-calc(52);
-			height: rem-calc(52);
-			display: inline-block;
-			font-size: rem-calc(30);
-			vertical-align: middle;
-
-			&:hover{
-				background: white;
-				color:$second-color;
-				border-color:transparent;
-			}
-		}
-
-		span{
-			font-size: rem-calc(20);
-			padding-left: 15px;
-			margin-top: -5px;
-			display: inline-block;
-		}
-	}
-
-	.landing-main-text {
-		
-		color:white;
-		font-weight: normal;
-		text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.56);
-		cursor: pointer;
-		position: relative;
-		z-index:1;
-		
-		i{
-			font-size: 35px;text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.56);opacity:0;
-			transform:translateY(-1rem);transition:0.5s; display: inline-block;
-		}
-
-		@media #{$medium-up} {
-			margin-top: rem-calc(220);
-			font-size: rem-calc(50);
-			line-height: rem-calc(50);
-		}
-
-		@media #{$xlarge-up} {
-			margin-top: rem-calc(330);
-			font-size: rem-calc(70);
-			line-height: rem-calc(90);
-		}
-
-		&:hover{
-			i{opacity:1;transform:translateY(0);}
-		}
-	}
-
-	.landing-next-section-wrapper {
-		height: rem-calc(115);
-		width: rem-calc(115);
-		position: absolute;
-		bottom: rem-calc(-80);
-		left: calc(50% - 3.59375rem); // Rem calc ne marche pas dans un calc ❤
-		cursor: pointer;
-
-		.landing-next-section-back {
-			height: 100%;
-			width: 100%;
-			background: #4f5a64;
-			transform:rotate(45deg);
-			border-radius: rem-calc(10px);
-		}
-	}
-}
-
-
-
-
-
-.svg-anim{
-	position:relative;
-	z-index:2;
-	background:#ECECF5;
-	border-bottom: 3px solid rgba(0,0,0,0.1);
-
-	&.svg-extia{
-		.row{
-			border:0;
-		}
-	}
-
-
-	@media #{$xlarge-up}{
-		// &:before{
-		// 	display: block;
-		// 	text-align: center;
-		// 	color: white;
-		// 	font-size: rem-calc(24);
-		// 	text-transform: uppercase;
-		// 	font-weight: bold;
-		// 	padding: 1.5rem 0;
-		// 	font-family: Ubuntu;
-		// 	content: attr(data-title);
-		// 	box-shadow:0px 1px 0px 0px rgba(0, 0, 0, 0.4);
-		// 	text-shadow:0px 1px 0px rgba(0, 0, 0, 0.4);
-		// 	width: 32rem;
-		// 	margin: 0 auto;
-		// 	border-radius: 0 0 10px 10px;
-		// 	z-index: 10;
-		// 	position: relative;
-		// }
-	}
-	
-
-
-	.anim-content{
-		z-index:2;
-		text-align: center;
-
-		@media #{$medium-up}{
-			text-align:left;
-		}
-
-		@media #{$large-up}{
-			text-align:center;
-		}
-
-		@media #{$xlarge-up}{
-			//margin-top: rem-calc(60);
-		}
-	}
-
-	svg{
-		width: 100%;
-		height: rem-calc(250);
-		
-		@media #{$medium-up}{
-			height: rem-calc(500);
-		}
-
-		&#VALEUR-dispatch{
-			@media #{$medium-up} {
-				transform: scale(1.35) translateX(-8rem);
-			}
-
-			// #valeur-carenage-front{@include colorize($col1);}
-			// #valeur-carenage-left{@include colorize($col1);}
-			// #valeur-carenage-right{@include colorize($col1);}
-			// #valeur-volant{@include colorize($col1);}
-			#casque, #valeur-gant1, #valeur-gant2{@include colorize($col1);}
-			[fill="#95C11F"]{fill:$col1;}
-
-		}
-
-		&#RISK-dispatch{
-			@media #{$medium-up} {
-				transform: scale(1.32) translateX(-1rem);
-			}
-			height: rem-calc(250);
-			@media #{$medium-up} {
-				height: rem-calc(500);
-			}
-
-			#risk-casque, #risk-gant1, #risk-gant2{@include colorize($col2);}
-		}
-
-		&#AMELIO-transform{
-			#amelio-casque1, #amelio-casque2, #aileron-front, #aileron-back, 
-			#amelio-kart-gant1, #amelio-kart-gant2, #amelio-f1-gant1, #amelio-f1-gant2{@include colorize($col3);}
-		}
-
-		&#EXTIA{
-			@media #{$xlarge-up}{
-				transform:scale(1.2) translateX(-3rem);
-			}
-		}
-	}
-	 
-	.row{
-		padding: 2rem 0;position: relative;
-
-		@media #{$xlarge-up}{
-			padding: 5rem 0;
-		}
-		
-		.next-section{
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			bottom: rem-calc(-47);
-			left: 25%;
-			transform: translateX(-50%);
-
-			i{
-				text-align: center;
-				border-radius: 50%;
-				border: 2px solid #384047;
-				width: rem-calc(90);
-				height: rem-calc(90);
-				font-size: rem-calc(27);
-				vertical-align: middle;
-				transition: all .2s;
-				transition: all .2s;
-				line-height: rem-calc(50);
-				background: #384047;
-				color: white;
-				@extend .show-for-medium-up;
-
-
-				&:hover{
-					background: black;
-					color:white;
-					border-color:white;
-					line-height: rem-calc(60);
-				}
-				
-			}
-		}
-
-	}
-
-	h2{
-		font-size:rem-calc(20);
-		font-family: Source Sans pro;
-		text-transform: uppercase;
-		margin: 0 0 0.5rem 0;
-
-		@media #{$medium-up}{
-			font-size:rem-calc(26);
-		}
-	}
-	h3{
-		
-		font-size:rem-calc(32);
-		font-family: Ubuntu;
-		font-weight: 500;
-		margin: 2rem 0 0 0;
-		position: relative;
-
-		@media #{$medium-up} {
-			font-size:rem-calc(40);
-		}
-
-		@media #{$xlarge-up} {
-			font-size:rem-calc(50);
-			margin: 4rem 0 0 0;
-		}
-
-		&:after{
-			width: 5rem;
-			height: 4px;
-			position: absolute;
-			content: " ";
-			top: -1.5rem;
-			left: 50%;
-			transform: translateX(-50%);
-		}
-	}
-
-}
-
-
-.svg-valeur{
-	box-shadow: 0 -7px 0 rgba(0,0,0,.1);
-
-	@media #{$medium-up} {
-		margin-top:rem-calc($medium-margin);
-	}
-
-	@media #{$large-up} {
-		
-
-		h2 { 
-			font-size:rem-calc(50); line-height: 0.86em;
-			&>span:first-child{
-				display: block;font-size:1em;
-				span{ font-size: 0.8em;}
-			}
-
-			&>span:nth-child(2){
-				font-size:0.6em;
-				transform: translateY(-1rem) translateX(0.2rem);
-				display: inline-block;
-			}
-
-			&>span:last-child{
-				font-size:1.3em;
-				font-weight: bold;
-				color:$col1;
-			}
-		}
-	}
-
-	@media #{$xlarge-up} { 
-		margin-top:rem-calc($large-margin); 
-		h2{font-size:rem-calc(65);} 
-	}
-
-	h3:after, &:before{background:$col1;}
-	.row .next-section i:hover{ background: $col1; }
-}
-.svg-risque{
-
-	@media #{$large-up} {
-		h2 { 
-			font-size:rem-calc(50); line-height: 0.86em;
-			span:first-child{
-				display: block;font-size:1em;
-			}
-
-			span:nth-child(2){
-				font-size:0.6em;
-				transform: translateY(-1rem) translateX(0.2rem);
-				display: inline-block;
-			}
-
-			span:last-child{
-				font-size:1.2em;
-				font-weight: bold;
-				color:$col2;
-			}
-		}
-	}
-
-	@media #{$xlarge-up} { h2{font-size:rem-calc(65);} }
-
-	h3:after,&:before{background:$col2;}
-	.row .next-section i:hover{ background: $col2; }
-	.row .next-section { left: 75%; }
-}
-.svg-amelio{
-	@media #{$large-up} {
-		.large-8{margin-top:-25rem;}
-	}
-
-	@media #{$large-up} {
-		h2 { 
-			font-size:rem-calc(50); line-height: 0.9em;
-			span:first-child{
-				display: block;font-size:1em;
-			}
-
-			span:last-child{
-				font-size:1.38em;
-				font-weight: bold;
-				color:$col3;
-			}
-		}
-	}
-
-	@media #{$xlarge-up} { h2{font-size:rem-calc(65);} }
-
-	h3:after, &:before{background:$col3;}
-	.row .next-section i:hover{ background: $col3; }
-}
-.svg-extia{
-
-	@media #{$large-up} {
-		h2 { 
-			font-size:rem-calc(80); line-height: 0.9em; color:$col4; font-weight: bold;
-		}
-	}
-	@media #{$xlarge-up} { h2{font-size:rem-calc(100);} }
-
-	h3:after, &:before{background:$col4;}
-	.row .next-section i:hover{ background: $col4; }
-	.row .next-section { left: 75%; }
-}
-
-
-
-/*AGILITE*/
-
-.landing{
-	height:rem-calc(500);
-	padding-top: rem-calc(30);
-	width: 100%;
-	z-index:1;
-
-	@media #{$medium-up} {
-		padding-top: rem-calc(160);
-		position: fixed; top:0; left:0;	
-	}
-
-	h1{
-		margin:4rem 0;
-		line-height: rem-calc(68);
-		color: white;
-
-		span{
-			font-size:rem-calc(30);
-		}
-	}
-}
-
-.landing-agilite{
-	background-image: url('../img/landing-bg-agile.jpg'); background-size: cover;
-}
-
-.push-top{
-	@media #{$medium-up} {
-		margin-top:rem-calc(500);
-	}
-}
-
-.content{
-	background: white;
-	box-shadow: 0 -7px 0 rgba(0,0,0,.1);
-	position: relative;
-	z-index:2;
-	padding:5rem 0;
-}
-
-/*REFERENCES*/
-div.references{
-	background:#f2f8f8;
-	position:relative;
-	z-index:2;
-	padding: 1.5rem 0 0 0;
-
-	.columns{
-		margin-bottom:2rem;
-	}
-
-	@media #{$medium-up} {
-		padding: 3rem 0 1rem;
-
-	}
-}
-
-
-/*CONTACT*/
-.landing-contact{
-	.row{
-		position: relative;
-		z-index:2;
-		pointer-events:none;
-	}
-}
-
-.map{
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-
-	&:after{
-		content: " ";
-		pointer-events:none;
-		position: absolute;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		background: rgba(0, 0, 0, 0.8);
-		z-index:1;
-	}
-}
-
-/*FOOTER*/
-.footer-contact{
-
-	background: url('../img/bg-footer.jpg') #39444e;
-	background-size:cover;
-	text-align:center;
-	position:relative; z-index:1;
-
-	q{
-		display: block;
-		font-size:rem-calc(30);
-		line-height: rem-calc(40);
-		margin: 1em 0;
-		text-align: center;
-		padding: 0 1em;
-		font-family: Ubuntu;
-		color:white;
-
-		@media #{$medium-up} {
-			font-size:rem-calc(48);
-			line-height: rem-calc(60);
-			margin: 2.5em 0 1em;
-			padding: 0 2em;
-		}
-	}
-
-}
-
-
-footer{
-
-	background: #202529;
-	text-align: center;
-	padding: 2rem 0;
-	position: relative;
-	z-index: 5;
-
-	&:hover .copyright i:before{
-		content: attr(data-text); 
-		color: #7E7E7E;
-		font-family: Source Sans Pro;
-		width: 114px;
-	}
-
-	.copyright{
-		font-size: rem-calc(18);
-		color: #7E7E7E;
-		font-weight: 400;
-		line-height: 22px;
-
-		i{ color:$col4; 
-			&:before{
-				transition:width 1s,color 1s;
-				width: 18px;
-				display: inline-block;
-			}
-		}
-	}
-}
