--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -20,10 +20,10 @@
 					<a href="/"><img class="svg" src="assets/img/logo_small.svg" alt=""></a>
 				</div>
 				<div class='nav-links-wrapper nav-links-hidden'>
-					<a class='nav-link {% if page == 'home' %}current{% endif %}' href="/" data-pos="1">Home</a>
-					<!-- <a class='nav-link {% if page == 'team' %}current{% endif %}' href="/team" data-pos="2">Team</a> -->
-					<a class='nav-link {% if page == 'agilite' %}current{% endif %}' href="/agilite" data-pos="3">Agilite</a>
-					<a class='nav-link {% if page == 'contact' %}current{% endif %}' href="/contact" data-pos="4">Contact</a>
+					<a class='nav-link enabled {% if page == 'home' %}current{% endif %}' href="/" data-pos="1">Home</a>
+					<!-- <a class='nav-link enabled {% if page == 'team' %}current{% endif %}' href="/team" data-pos="2">Team</a> -->
+					<a class='nav-link enabled {% if page == 'agilite' %}current{% endif %}' href="/agilite" data-pos="3">Agilite</a>
+					<a class='nav-link enabled {% if page == 'contact' %}current{% endif %}' href="/contact" data-pos="4">Contact</a>
 				</div>
 				<div class="back-to-top show-for-medium-up">
 					<i class="icon-arrow-up"></i>
