--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -11,39 +11,44 @@
 		</header>
 		<section class="push-top content">
 			<div class="row">
-				<article class="large-12 columns">
+				<article class="large-6 columns agility-item">
 					<h2>Ceci est un titre</h2>
-					<div class="large-3 columns">
+					<div class="large-6 columns">
 						<img src="http://placehold.it/790x500&text=svg" alt="">
 					</div>
-					<div class="large-9 columns">
+					<div class="large-6 columns">
+						<ul>
+							<li>Lorem</li>
+							<li>Ipsum</li>
+							<li>Ca</li>
+							<li>Roxx</li>
+						</ul>
+					</div>
+				</article>
+				<article class="large-6 columns agility-item">
+					<h2>Ceci est un titre</h2>
+					<div class="large-6 columns svg-agility">
+						<img src="http://placehold.it/790x500&text=svg" alt="">
+					</div>
+					<div class="large-6 columns">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, voluptas, aperiam, quos, voluptate quidem earum ex nihil deleniti labore sapiente vitae harum possimus impedit nulla suscipit cumque accusantium reiciendis vero!</p>
 					</div>
 				</article>
-				<article class="large-12 columns">
+				<article class="large-6 columns agility-item">
 					<h2>Ceci est un titre</h2>
-					<div class="large-3 columns">
+					<div class="large-6 columns">
 						<img src="http://placehold.it/790x500&text=svg" alt="">
 					</div>
-					<div class="large-9 columns">
+					<div class="large-6 columns">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, voluptas, aperiam, quos, voluptate quidem earum ex nihil deleniti labore sapiente vitae harum possimus impedit nulla suscipit cumque accusantium reiciendis vero!</p>
 					</div>
 				</article>
-				<article class="large-12 columns">
+				<article class="large-6 columns agility-item">
 					<h2>Ceci est un titre</h2>
-					<div class="large-3 columns">
+					<div class="large-6 columns">
 						<img src="http://placehold.it/790x500&text=svg" alt="">
 					</div>
-					<div class="large-9 columns">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, voluptas, aperiam, quos, voluptate quidem earum ex nihil deleniti labore sapiente vitae harum possimus impedit nulla suscipit cumque accusantium reiciendis vero!</p>
-					</div>
-				</article>
-				<article class="large-12 columns">
-					<h2>Ceci est un titre</h2>
-					<div class="large-3 columns">
-						<img src="http://placehold.it/790x500&text=svg" alt="">
-					</div>
-					<div class="large-9 columns">
+					<div class="large-6 columns">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, voluptas, aperiam, quos, voluptate quidem earum ex nihil deleniti labore sapiente vitae harum possimus impedit nulla suscipit cumque accusantium reiciendis vero!</p>
 					</div>
 				</article>
