--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -11,7 +11,7 @@
 		<nav class="navbar navbar-top">
 			<div class="row">
 				<i class="toggle-menu show-for-small-only">
-					<span class='icon-folded'>≡</span>
+					<span class='ham-folded'>≡</span>
 					<span class='icon-unfolded'>
 						<!-- TODO : Flêche ici -->
 					</span>
