--- a/web/assets/scss/components/global.scss
+++ b/web/assets/scss/components/global.scss
@@ -18,6 +18,7 @@ h1{
 	font-weight: normal;
 	font-size: rem-calc(40);
 	line-height: rem-calc(48);
+	margin-top: rem-calc(60);
 
 	@media #{$medium-up} {
 			margin-top: rem-calc(220);
@@ -71,7 +72,7 @@ a {
 	}
 
 	&.button-white{
-		margin-bottom:7rem;
+		margin-bottom:3rem;
 		border: 2px solid #fff;
 		color: white;
 
