add extia animation (not finished)

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -77,7 +77,8 @@
 					<a href="/agilite" class="button">En savoir plus</a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7  columns">
-					<img id="EXTIA" class="svg" src="assets/img/svg/kilix_anim_extia.svg">
+					<svg id="EXTIA-animation" x="0px" y="0px" viewBox="350 0 1400 800">
+    				</svg>
 				</div>
 			</div>
 		</section>
