--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -16,8 +16,9 @@
 		padding-top: rem-calc(120);
 
 		background-image: url('../img/landing-bg.jpg');background-size: cover; background-position: top right;
-		position: fixed; top:0; left:0;
-
+		&.desktop {
+			position: fixed; top:0; left:0;
+		}
 	}
 
 	@media #{$xlarge-up}{
@@ -141,7 +142,9 @@
 		// }
 	}
 	
-
+	.anim-item {
+		
+	}
 
 	.anim-content{
 		z-index:2;
@@ -293,9 +296,16 @@
 .svg-valeur{
 	box-shadow: 0 -7px 0 rgba(0,0,0,.1);
 
-	@media #{$medium-up} {
-		margin-top:rem-calc($medium-margin);
+	&.desktop {
+		@media #{$medium-up} {
+			margin-top:rem-calc($medium-margin);
+		}		
+		@media #{$xlarge-up} { 
+			margin-top:rem-calc($large-margin); 
+			h2{font-size:rem-calc(65);} 
+		}
 	}
+
 
 	@media #{$large-up} {
 		
@@ -321,10 +331,6 @@
 		}
 	}
 
-	@media #{$xlarge-up} { 
-		margin-top:rem-calc($large-margin); 
-		h2{font-size:rem-calc(65);} 
-	}
 
 	h3:after, &:before{background:$col1;}
 	.row .next-section i:hover{ background: $col1; }
