--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -55,16 +55,16 @@
 						<strong>Contactez-nous</strong> <br>
 						Tél : 01 46 99 91 91 <br>
 						Fax : 01 46 99 91 90 <br>
-						contact@kilix.fr
+						<a href="mailto:contact@kilix.fr">contact@kilix.fr</a>
 					</div>
-					<div class="medium-4 columns">
-						<a href="">Home</a><br>
-						<a href="">Agilite</a><br>
-						<a href="">Team</a>
+					<div class="medium-4 columns footer-links">
+						<a class="enabled" data-pos="1" href="/">Home</a><br>
+						<a class="enabled" data-pos="2" href="/team">Team</a><br>
+						<a class="enabled" data-pos="3" href="/agilite">Agilité</a>
 					</div>
 				</div>
 				<div class="large-12 columns">
-					Kilix <i class="icon-heart" data-text="est une société"></i> extia <br>Tous droits réservés Copyright © 2014 Kilix
+					Kilix <i class="icon-heart" data-text="est une marque"></i> extia <br>Tous droits réservés Copyright © 2014 Kilix
 				</div>
 			</div>
 		</footer>
