--- a/web/assets/scss/components/footer.scss
+++ b/web/assets/scss/components/footer.scss
@@ -9,7 +9,7 @@
 	border-bottom: 5px solid rgb(28, 33, 36);
 
 	@media #{$large-up} {
-		background-position: 0 -30px;
+		background-position: center center;
 	}
 
 	q{
@@ -48,7 +48,7 @@ footer{
 		content: attr(data-text); 
 		color: #8b8b8b;
 		font-family: Source Sans Pro;
-		width: 114px;
+		width: 120px;
 	}
 
 	.copyright{
@@ -82,6 +82,10 @@ footer{
 				font-size:rem-calc(18);
 				font-weight: normal;
 			}
+
+			a:hover{
+				color:#e79027;
+			}
 		}
 
 		.large-12{
@@ -94,11 +98,16 @@ footer{
 
 .map{
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
+	top: 0; bottom:0;
+	left: 0; right: 0;
 	z-index:1;
+
+	iframe{
+		position: absolute;
+		top: 0; bottom:0;
+		left: 0; right: 0;
+		z-index:1;
+	}
 
 	&:after{
 		content: " ";
