team page skeleton

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -13,7 +13,7 @@
 				<i class="toggle-menu show-for-small-only">
 					<span class='icon-folded'>≡</span>
 					<span class='icon-unfolded'>
-						<!-- TODO : Flêche ici -->
+						<!-- TODO : Flèche ici -->
 					</span>
 				</i>
 				<div class="logo">
@@ -21,9 +21,9 @@
 				</div>
 				<div class='nav-links-wrapper nav-links-hidden'>
 					<a class='nav-link enabled {% if page == 'home' %}current{% endif %}' href="/" data-pos="1">Home</a>
-					<!-- <a class='nav-link enabled {% if page == 'team' %}current{% endif %}' href="/team" data-pos="2">Team</a> -->
+					<a class='nav-link enabled {% if page == 'team' %}current{% endif %}' href="/team" data-pos="2">Team</a>
 					<a class='nav-link enabled {% if page == 'agilite' %}current{% endif %}' href="/agilite" data-pos="3">Agilite</a>
-					<a class='nav-link enabled {% if page == 'contact' %}current{% endif %}' href="/contact" data-pos="4">Contact</a>
+					<!-- <a class='nav-link enabled {% if page == 'contact' %}current{% endif %}' href="/contact" data-pos="4">Contact</a> -->
 				</div>
 				<div class="back-to-top show-for-medium-up">
 					<i class="icon-arrow-up"></i>
