--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -2,8 +2,39 @@
 
 {% block content %} 
 	<div class="container team" data-page="team">
-		<section class="large-12 columns panel h2000">
-			team
+	<header class="landing-home" style="position:relative;">
+			<div class="row">
+				<div class="large-10 columns">
+					<div class="kilix-dispatch show-for-medium-up">
+						<svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg>	
+					</div>
+					<h1 class='landing-main-text'>
+						Nous sommes une agence digitale,
+						avec des post-it sur les murs. <i class="icon-arrow-down4"> </i>
+					</h1>
+				</div>
+
+			</div>
+		</header>
+		<section class="svg-anim" data-title="Gestion par la valeur">
+			<div class="row cene">
+				<div class="large-12 medium-7 columns">
+						<img src="http://filmgeek.fr/wp-content/uploads/2009/04/The-Expendables-2-C%C3%A8ne-Last-Supper.jpg" alt="">
+				</div>
+			</div>
+		</section>
+		<section class="svg-anim" data-color="col1" data-title="Gestion par la chaleur">
+			<div class="row">
+				<div class="large-4 medium-7 columns">
+					<svg id="TEAM-f1" x="0px" y="0px" viewBox="0 0 1500 900">
+    				</svg>
+				</div>
+				<div class="large-8 medium-5 columns ">
+					<h2><span>Gestion <span>par</span></span> <span>la</span> <span>chaleur</span></h2>
+					<h3>L’essentiel avant tout !</h3>
+					<p>Parce que votre Time-to-Market est notre première priorité : Valorisez vos besoins, et reprenez le contrôle de vos projets. Ensemble, développons avant tout ce qui compte vraiment.</p>
+				</div>
+			</div>
 		</section>
 	</div>
 {% endblock %}
