--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -38,6 +38,11 @@ $large-margin:800;
      50%  {transform: translateY(-20px);}
      to   {transform: translateY(0);}
 }
+@keyframes movePowerLine{
+	from{ stroke-dashoffset: 0;}
+	to { stroke-dashoffset: 200px;}
+}
+
 
 
 
