Fix refs tf1 class

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -108,15 +108,15 @@
 			</div>
 		</section>
 		<div class="references">
-	  		<div class="row large-centered columns">
-	  			<div class="reference"><img src="/assets/img/ref-tf1.png" alt=""></div><!--
+	  		<div class="row large-centered">
+	  			<div class="reference"><img src="/assets/img/ref-orange.png" alt=""></div><!--
 	  			--><div class="reference"><img src="/assets/img/ref-ftv.png" alt=""></div><!--
 	  			--><div class="reference"><img src="/assets/img/ref-aegis.png" alt=""></div><!--
-	  			--><div class="reference"><img src="/assets/img/ref-orange.png" alt=""></div><!--
-	  			--><div class="reference"><img src="/assets/img/ref-generali.png" alt=""></div><!--
-	  			--><div class="reference"><img src="/assets/img/ref-lagardere.png" alt=""></div><!--
 	  			--><div class="reference"><img src="/assets/img/ref-publicis.png" alt=""></div><!--
-	  			--><div class="reference"><img src="/assets/img/ref-sfr.png" alt=""></div>
+	  			--><div class="reference"><img src="/assets/img/ref-generali.png" alt=""></div><!--
+	  			--><div class="reference tf1"><img src="/assets/img/ref-tf1.png" alt=""></div><!--
+	  			--><div class="reference"><img src="/assets/img/ref-lagardere.png" alt=""></div><!--
+	  			--><div class="reference clear-fix"><img src="/assets/img/ref-sfr.png" alt=""></div>
 	  		</div>
 	  	</div>
 	  	{% include "contact-footer.html.twig" %}
