--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -424,7 +424,7 @@ div.references{
 	background:#fff;
 	position:relative;
 	z-index:2;
-	padding: 1rem 0 1rem;
+	padding: 2rem 0;
 
 	.columns{
 		margin-bottom:2rem; padding: 0;
@@ -436,26 +436,25 @@ div.references{
 		width: 25%;
 		height: rem-calc(90);
 		display:inline-block;
-		margin-top: rem-calc(15);
+		padding: 0 25px;
+		margin-bottom:1rem;
 
 		img{
 			max-height: 90px;
 		}
 
-		&.tf1 {
-			img {
-				width:75%;
-			}
-		}
-
 		@media #{$large-up}{
-			margin-top: 0;
+
 			transition: all 0.5s ease;
 			filter: grayscale(1);
 			width: 12.5%;
-
+			padding: 0 25px;
+			opacity: 0.3;
+			margin-bottom:0;
+			
 			&:hover {
 				filter: grayscale(0);
+				opacity: 1;
 			}
 		}
 	}
