--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -35,6 +35,7 @@
 							<img src="assets/img/gif/value-small.gif" alt="">
 						{% endif %}
 					{% else %}
+						<svg id="valeur-reload" x="0px" y="0px" viewBox="0 0 1400 700"></svg>
 						<svg id="VALEUR-dispatch" x="0px" y="0px" viewBox="0 0 1400 700"></svg>
 					{% endif %}					
 				</div>
