agility without animation

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -14,14 +14,12 @@
 				<article class="large-6 columns agility-item">
 					<h2>Gestion par les Risques</h2>
 					<div class="large-6 columns">
-						<img src="http://placehold.it/790x500&text=svg" alt="">
+						<svg id="AGI-One" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
 					</div>
 					<div class="large-6 columns">
 						<ul>
 							<li>
-								<svg id="AGI-One" x="0px" y="0px" viewBox="0 0 1400 700"></svg>
 								Maximiser la valeur et par la complexité
-
 							</li>
 							<li>
 								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
@@ -116,8 +114,4 @@
 		</section>
 		{% include "contact-footer.html.twig" %}
 	</div>
-{% endblock %}
-
-{% block scripts %}
-<script src='agility.js'></script>
 {% endblock %}
