--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -16,3 +16,4 @@
 <script src="assets/js/animation-improve.js"></script>
 <script src="assets/js/animation-team.js"></script>
 <script src="assets/js/animation-extia.js"></script>
+<script src="assets/js/animation-agilite.js"></script>
