Added section in home, bigger kilix

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -4,7 +4,7 @@
 	<div class="container home" data-page="home">
 		<header class="landing-home {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div class="row">
-				<div class="large-10 columns">
+				<div class="large-8 columns">
 					<div class="kilix-dispatch show-for-medium-up">
 						<svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg>	
 					</div>
@@ -20,7 +20,18 @@
 
 			</div>
 		</header>
-		<section class="svg-anim ❤ svg-valeur {% if ress.isMobile ==  false %}desktop{% endif %}" data-color="col1" data-title="Gestion par la valeur">
+		<section class="intro  {% if ress.isMobile ==  false %}desktop{% endif %}">
+			<div class="row">
+				<div class="medium-4 columns intro-picto">
+					
+				</div>
+				<div class="medium-8 columns intro-content">
+					<h2>Ici un petit titre</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, rem, unde, possimus, sapiente iure officiis accusantium ducimus consequatur praesentium aperiam deserunt asperiores numquam eum ipsam maiores sequi voluptas cupiditate vero! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, rem, unde, possimus, sapiente iure officiis.</p>
+				</div>
+			</div>
+		</section>
+		<section class="svg-anim ❤ svg-valeur" data-color="col1" data-title="Gestion par la valeur">
 			<div class="row">
 				<div class="large-6 medium-5 columns anim-content">
 					<h2><span>Gestion <span>par </span></span><span>la</span> <span>valeur</span></h2>
