--- a/web/assets/scss/components/global.scss
+++ b/web/assets/scss/components/global.scss
@@ -9,6 +9,7 @@ body {
 	color: $primary-color;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	line-height: rem-calc(24);
 }
 
 
