--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -1,4 +1,61 @@
 /*HOME*/
+
+.intro{
+
+	position: relative;
+	z-index: 2;
+
+	&.desktop {	
+		@media #{$medium-up} {
+			margin-top:rem-calc($medium-margin);
+		}		
+		@media #{$xlarge-up} { 
+			margin-top:rem-calc($large-margin); 
+			h2{font-size:rem-calc(65);} 
+		}
+	}
+
+	box-shadow: 0 -7px 0 rgba(0,0,0,.1);
+	background:$col1;
+
+	p{
+		color:rgba(255, 255, 255, 0.8); 
+	}
+
+	h2{
+		color: rgba(255, 255, 255, 0.8);
+	}
+
+	.columns{
+		padding: 3rem;
+
+		@media #{$large-up} { 
+			padding: 6rem;
+		}
+	}
+
+	.intro-picto{
+		background: url(../img/svg/agility.svg) rgba(255, 255, 255, 0.1) no-repeat center center; 
+		position: relative;
+		@media#{$large-up}{
+			height:30rem;
+
+			&:after{
+				position: absolute;
+				background:rgba(255, 255, 255, 0.1);
+				width: 100%;
+				height: 100%;
+				top: 0;
+				z-index: 3;
+				left: -100%;
+				content: " ";
+			}
+		}
+	}
+}
+		
+
+
 .landing-home{
 	height:rem-calc($small-margin);
 	padding-top: rem-calc(63);
@@ -83,6 +140,12 @@
 
 		&:hover{
 			i{opacity:1;transform:translateY(0);}
+		}
+
+		@media #{$xlarge-up}{
+			margin-top: rem-calc(280);
+			font-size: rem-calc(80);
+			line-height: rem-calc(90);
 		}
 	}
 
@@ -280,7 +343,7 @@
 				&:hover{
 					background: black;
 					color:white;
-					border-color:white;
+					border-color:transparent;
 					line-height: rem-calc(60);
 				}
 				
@@ -295,6 +358,7 @@
 		text-transform: uppercase;
 		margin: 0 0 0.5rem 0;
 
+
 		@media #{$medium-up}{
 			font-size:rem-calc(26);
 		}
@@ -306,6 +370,7 @@
 		font-weight: 500;
 		margin: 2rem 0 0 0;
 		position: relative;
+		line-height: rem-calc(50);
 
 		@media #{$medium-up} {
 			font-size:rem-calc(40);
@@ -331,16 +396,10 @@
 
 
 .svg-valeur{
-	box-shadow: 0 -7px 0 rgba(0,0,0,.1);
-
-	&.desktop {
-		@media #{$medium-up} {
-			margin-top:rem-calc($medium-margin);
-		}		
 		@media #{$xlarge-up} { 
-			margin-top:rem-calc($large-margin); 
-			h2{font-size:rem-calc(65);} 
-		}
+			h2{font-size:rem-calc(65);
+		} 
+		
 	}
 
 
