--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -12,14 +12,15 @@
 		<section class="push-top content {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div class="row">
 				<article class="large-6 columns agility-item">
-					<h2>Gestion par les Risques</h2>
+					<h2>Gestion par la Valeur</h2>
 					<div class="large-6 columns">
-						<svg id="AGI-One" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
+						<svg id="AGI-value" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
 					</div>
 					<div class="large-6 columns">
 						<ul>
 							<li>
-								Maximiser la valeur et par la complexité
+							<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+								Maximiser l'apport de valeur par le ratio valeur/complexité
 							</li>
 							<li>
 								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
@@ -44,7 +45,7 @@
 				<article class="large-6 columns agility-item">
 					<h2>Gestion par les Risques</h2>
 					<div class="large-6 columns">
-						<img src="http://placehold.it/790x500&text=svg" alt="">
+						<svg id="AGI-risk" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
 					</div>
 					<div class="large-6 columns">
 						<ul>
@@ -62,7 +63,7 @@
 							</li>
 							<li>
 								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
-								Recette et validation en continue
+								Recette et validation en continu
 							</li>
 						</ul>
 					</div>
@@ -72,7 +73,7 @@
 				<article class="large-6 columns agility-item">
 					<h2>Adaptabilité</h2>
 					<div class="large-6 columns">
-						<img src="http://placehold.it/790x500&text=svg" alt="">
+						<svg id="AGI-adapt" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
 					</div>
 					<div class="large-6 columns">
 						<ul>
@@ -90,7 +91,7 @@
 				<article class="large-6 columns agility-item">
 					<h2>Visibilité</h2>
 					<div class="large-6 columns">
-						<img src="http://placehold.it/790x500&text=svg" alt="">
+						<svg id="AGI-vis" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
 					</div>
 					<div class="large-6 columns">
 						<ul>
