Added some IDs to svg

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -5,7 +5,8 @@
 		<header class="landing landing-agilite {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div class="row">
 				<div class="large-8 columns">
-					<h1>Notre culture : <br> L'agilité. <span></span><i class="icon-arrow-down4"> </i></h1>
+					<h1>Notre culture : L'agilité. <span></span><i class="icon-arrow-down4"> </i></h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, rem, unde, possimus, sapiente iure officiis accusantium ducimus consequatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				</div>
 			</div>
 		</header>
