--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -6,6 +6,7 @@
 			<div class="row">
 				<div class="large-8 columns">
 					<h1>Titre sur l'équipe <span></span><i class="icon-arrow-down4"> </i></h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, rem, unde, possimus, sapiente iure officiis accusantium ducimus consequatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				</div>
 			</div>
 		</header>
