--- a/web/assets/scss/components/logo-home.scss
+++ b/web/assets/scss/components/logo-home.scss
@@ -1,6 +1,24 @@
 .kilix-dispatch{
   padding-left: .9375rem;
   position: relative;
+  cursor:pointer;
+}
+
+#theLittleX{
+    transform-origin: 50% 50%;
+    transition: transform 1s;
+    
+}
+
+.rotateTheLittleX{
+    animation: xRotate 4s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes xRotate{
+  to{
+    transform: rotate(3600deg);
+  }
 }
 
 .kilix-dispatch svg {
@@ -16,7 +34,7 @@
   }
 
   @media #{$xlarge-up} {
-    width: 80rem;;
+    width: 70rem;;
     top: -5rem;
   }
 }
